Fixed layout bug with media viewer

--- a/resources/css/leum.css
+++ b/resources/css/leum.css
@@ -523,26 +523,27 @@ ul.tagfield li a.tag-delete {
 }
 
 .media-viewer {
-  width: 100%;
-  height: 100%;
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-content: center;
   justify-content: center;
   align-items: center;
-  align-self: center;
-  position: fixed;
   z-index: 300;
+}
+.media-viewer .content,
+.media-viewer .media-item,
+.media-viewer img {
+  max-width: 100%;
+  max-height: 100%;
 }
 .media-viewer .media-viewer-modal {
   background-color: #15191b;
   color: #bebebe;
   max-height: 100%;
-}
-.media-viewer .media-item {
-  margin: 0;
 }
 .media-viewer .header, .media-viewer .footer {
   display: flex;
@@ -570,9 +571,6 @@ ul.tagfield li a.tag-delete {
   flex: 1;
   margin: 0.5em;
   font-size: 120%;
-}
-.media-viewer .content {
-  font-weight: thick;
 }
 
 .viewer-button {
