--- a/resources/scss/modules/_media-viewer.scss
+++ b/resources/scss/modules/_media-viewer.scss
@@ -1,20 +1,25 @@
 .media-viewer
 {
+	position: fixed;
+	top: 0;
+	left: 0;	
+
 	width: 100%;
 	height: 100%;
-	top: 0;
-	left: 0;
 
 	display: flex;
 	flex-direction: column;
-	align-content: center;
 	justify-content: center;
 	align-items: center;
-	align-self: center;
-
-	position: fixed;
-
 	z-index: 300;
+	
+	.content,
+	.media-item,
+	img
+	{
+		max-width: 100%;
+		max-height: 100%;
+	}
 
 	.media-viewer-modal
 	{
@@ -22,11 +27,7 @@
 		color: $dark-text;
 		max-height: 100%;
 	}
-	
-	.media-item
-	{
-		margin: 0;
-	}
+
 	.header, .footer
 	{
 		display: flex;
@@ -37,8 +38,6 @@
 	{
 		display: block;
 		height: 100%;
-
-		// padding: 0.5em;
 
 		background-color: inherit;
 		border: none;
@@ -61,15 +60,8 @@
 	{
 		flex: 1;
 		margin: 0.5em;
-		// height: 2em;
-		// line-height: 2em;
-		// vertical-align:middle;
 		font-size: 120%;
 
-	}
-	.content
-	{
-		font-weight: thick;
 	}
 }
 
